dns_automation/terraform_dns_automation/modules/security_group/main.tf
resource "aws_security_group" "alb_sg" {
  name        = "alb-sg-jessamy"
  description = "ALB SG for jessamy"
  vpc_id      = var.vpc_id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "alb-sg-jessamy"
  }
}

resource "aws_security_group" "ecs_sg" {
  name        = "ecs-sg-jessamy"
  description = "ECS SG for jessamy"
  vpc_id      = var.vpc_id
  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "ecs-sg-jessamy"
  }
}
